# iLaunchify

./: .env.example  .gitignore  ARCHITECTURE.md  AUDIT_2026-05-18.md  README.md  RESEARCH_SYNTHESIS_2026-05-18.md  docker-compose.yml  package.json  pnpm-lock.yaml  tsconfig.json  turbo.json  ui-designer.plugin  ux-designer.plugin
.github/: PULL_REQUEST_TEMPLATE.md
design/: business-landing.html  button-study.html  marketplace-mockup.html  mood-board-app.html  mood-board-landing-editorial.html  mood-board-landing-v2.html  mood-board-landing.html  mood-board-neon.html  mood-board-variants.html  mood-board.html
docs/: AI_LAYER_DESIGN_PRIORS.md  AUTO_RECOGNITION_PLAN.md  BRAND_IDENTITY_STUDIO.md  CANVAS_ENGINE.md  COMPLIANCE.md  CREATOR_ONBOARDING.md  DEPLOYMENT.md  DESIGN_STUDIO.md  DESIGN_STUDIO_REBUILD.md  DESIGN_SYSTEM.md  FOD_ADMIN_DELTA.md  FOD_RECOVERY_PLAN.md  LANDING_SYSTEM_STUDIO_POP.md  MANUFACTURER_PRODUCT_BUILDER.md  MARKETPLACE_DESIGN.md  MARKETS_AND_REGIONS.md  MULTI_PARTNER_APPROVAL_WORKFLOW.md  ONBOARDING.md  (+13 more)
services/compliance/: Dockerfile  README.md  pyproject.toml
services/compliance/app/: calculation.py  compliance.py  config.py  db.py  label_render.py  main.py  rounding.py  rule_packs.py  schemas.py
services/compliance/app/routers/: compliance.py  health.py  labels.py  nutrition.py
services/compliance/app/rule_packs/: us-fda-food-2026.01.json  us-fda-supplements-2026.01.json
services/compliance/app/templates/: nutrition_facts.html  supplement_facts.html
services/compliance/tests/: test_calculation.py  test_compliance.py  test_rounding.py
(+476 files in other folders)
